--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "barryvdh/laravel-ide-helper": "^2.10",
         "diglactic/laravel-breadcrumbs": "^8.1",
         "fideloper/proxy": "^4.0",
+        "fruitcake/laravel-cors": "^3.0",
         "guzzlehttp/guzzle": "^7.3",
         "harimayco/laravel-menu": "^1.4",
         "intervention/image": "^2.5",
